chrome/skin/common/australisBar.css
@namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
@-moz-document url("chrome://browser/content/browser.xul") {

	.addon-bar .toolbarbutton-text,
	window[PrintPreview="true"] .addon-bar,
	window[PrintPreview="true"] .PuzzlePiece,
	
	/* Vertical Toolbar's spring widget, no need to create a whole module just for this */
	#wrapper-verticaltoolbar-spring {
		display: none;
	}
	
	/* trying to use our special widgets in the menu-panel and overflow panel */
	
	.customization-palette .toolbarbutton-1,
	toolbarspacer[cui-areatype="menu-panel"] {
		min-width: calc(22.35em /3);
		width: calc(22.35em /3);
		max-width: calc(22.35em /3);
	}
	
	toolbarpaletteitem toolbarspacer[cui-areatype="menu-panel"] {
		min-height: 2.5em;
		height: 2.5em;
		max-height: 2.5em;
	}
	
	toolbarspring[cui-areatype="menu-panel"] {
		min-width: 22.35em;
		width: 22.35em;
		max-width: 22.35em;
		min-height: 0;
		height: 0;
		max-height: 0;
	}
	
	toolbarpaletteitem toolbarspring[cui-areatype="menu-panel"] {
		min-height: 2em;
		height: 2em;
		max-height: 2em;
		margin-top: -1em;
	}
	
	toolbarseparator[cui-areatype="menu-panel"] {
		min-width: 22.35em;
		width: 22.35em;
		max-width: 22.35em;
	}
	
	toolbarspacer.overflowedItem {
		min-height: 1em !important;
		margin-top: 6px;
	}

	toolbarseparator.overflowedItem {
		-moz-appearance: none !important;
		min-height: 0 !important;
		border-top: 1px solid ThreeDShadow !important;
		border-bottom: 1px solid ThreeDHighlight !important;
		margin-top: 6px;
	}
	
	/* status-bar */
	
	#status-bar {
		-moz-appearance: none;
		min-width: 1px;
		
		/* override australis shim */
		height: auto !important;
		
		/* override hidden="true" for the status bar compatibility shim in case it was persisted for the real status bar */
		display: -moz-box;
	}
	
	#status-bar > statusbarpanel {
		border-width: 0;
		-moz-appearance: none;
	}
	
	window[customizing="true"] #status-bar,
	window:not([customizing="true"]) #thePuzzlePiece-status-bar-placeholder {
		display: none;
	}
	
}

